package com.github.ui;

public class InnView implements View {
    @Override
    public void display() {
        System.out.println("Displaying Inn Screen...");
    }
}
