public class gainExperienceUseCase {
    
}
