package com.github.domain;

public class BattleRoom implements Room{
    // TO DO: Link to Battle library for battle logic 
    // TO DO: link to character progression for generating enemies based on party level
    
    private ArrayList<Enemy> enemies;
    
    public List getEnemies(){
        return enemies;
    }

    
    
}

