package com.github.domain;

public class Cheese implements ItemTest{
    private String name;
    private int price;
    private int healAmount;

    public Cheese(){
        name = "Cheese";
        description = "A delicious piece of cheese. Heals 50 HP.";
        price = 500;
        healAmount = 50;
    }
    
}
