package com.github.domain;

public class RoomFactory {

    public Room CreateNextRoom(float battlechance){

    }
}
