package com.github.domain;
public class Wine implements ItemTest{
    private String name;
    private int price;
    private int manaHeal;

    public Wine(){
        name = "Wine";
        description = "A bottle of wine. Heals 100 MP.";
        price = 750;
        manaHeal = 100;
    }
    
}
