@startuml CampaignManager
skinparam Style strictuml
skinparam SequenceMessageAlignment center


class InnView <<boundary>>{
    + showPartyHealed()
    + ShowShop()
    + SucessfulTransaction()
    + FailedTransaction()
    + RecruitList()
    + BoughtHero()
}
class SpawnView <<boundary>>{
}
class BattleEnd <<boundary>>{
    + onNextRoomClicked()
    + onSaveClicked()
    + onItemConsumed()
    - updateExperience()
    - updateGold()
}

class BattleView <<boundary>>{

}

class InnController <<control>> {
    + getShop()
    + buyItem(id: int, amount: int = 1)
    + viewRecruit(name: String)
    + buyRecruit(name: String)
    + Intialize(): DTO
}
class BattleController <<control>> {
    + Intialize(): DTO
    + attemptExperienceGain()
    + attemptGoldGain()
}
class RoomController <<control>>{
    + attemptNextRoom()
    + attemptIntialize()
    + endCampaign()

    + attemptConsume(hero: HeroState, item: Item)
}


class endCampaignUseCase <<APPLICATION>>{
    + attemptEndCampaign()
}

class gainExperienceUseCase <<APPLICATION>>{
    + gainExperience()
}
class gainGoldUseCase <<APPLICATION>>{
    + gainGold()
}

class battleIntializeUseCase <<APPLICATION>>{
    + initialize()
}
class itemConsumeUseCase <<APPLICATION>>{

}
class InnIntializeUseCase <<APPLICATION>>{
    + maxRestore(): String
}
class NextRoomUseCase <<APPLICATION>>{
    + NextRoom(): Room
}
class BuyRecruitUseCase <<APPLICATION>> {
    + buyRecruit(name: String): DTO

}
class ViewRecruitUseCase <<APPLICATION>>{
    + getRecruits(): DTO
}
class BuyItemUseCase <<APPLICATION>>{
    + buyItem(id: int, amount: int = 1)

}
class getShopUseCase <<APPLICATION>>{
    + getShop()
}


class Inn {
    - {static} SHOPLIST : List<Item>
    - Recruits: map<name: String, hero: HeroState>

    + recover(): void
    + viewRecruits(): map<name: String, hero: HeroState>
    + hasRecruit(name: String): boolean
    + getShop(): List[Item]
}
class BattleRoom{
    - enemies: List<enemy>

    + getEnemies(): List

    + setTurnOrder(allies: List, enemies: List)
}
class PartyService{
    - heros: List<HeroState>

    - hasSpace(): boolean
    + isDefeated(): boolean
    + levelUp(exp: int)
    + maxRestore()
    + addHero(hero: HeroState)
    + getTotalLevels(): int
    + getParty(): List<HeroState>
}
class InventoryService{
    - gold: int
    - goldspent: int
    - items: List<Item>
    + getGold(): int
    + minusGold(): int
    + addItem(item)
    + canAfford(amount)
    + addItem(Id: int, amount: int)
    + getGoldSpent(): int

}


class Score{    
    + getScore(int goldSpent, int totalLevels, int extraGold): int
}
abstract class CampaignManager{
    #_curRoom: Room
    #_battleChance: float
    #_roomCounter: int
    + getBattleChance(): float
    + setBattleChance(percent: float): void
    + getRoomCounter(): int
    + increaseRoomCounter(): void
    + nextRoom(): Room
    + getCurRoom(): Room
    + StartNewCampaign()
}
 interface Initialize{
        + startNewCampaign()
    }
interface Room{
    + intialize(PartyService partyService)

}
class HeroState {
    - curHp: int
    - maxHp: int
    - specialization: String

    - curMana: int
    - maxMana: int

    - mageLvl: int
    - warriorLvl: int
    - orderLvl: int
    - chaosLvl: int

    - curExp: int
    - lvlUpExp: int

    - defense: int
    - attack: int

    - ability: List<String>

    + getCurHp(): int
    + setCurHp(curHp: int): void

    + getMaxHp(): int
    + setMaxHp(maxHp: int): void

    + getSpecialization(): String
    + setSpecialization(specialization: String): void

    + getCurMana(): int
    + setCurMana(curMana: int): void

    + getMaxMana(): int
    + setMaxMana(maxMana: int): void

    + getMageLvl(): int
    + setMageLvl(mageLvl: int): void

    + getWarriorLvl(): int
    + setWarriorLvl(warriorLvl: int): void

    + getOrderLvl(): int
    + setOrderLvl(orderLvl: int): void

    + getChaosLvl(): int
    + setChaosLvl(chaosLvl: int): void

    + getCurExp(): int
    + setCurExp(curExp: int): void

    + getLvlUpExp(): int
    + setLvlUpExp(lvlUpExp: int): void

    + getDefense(): int
    + setDefense(defense: int): void

    + getAttack(): int
    + setAttack(attack: int): void

    + getAbility(): List<String>
    + setAbility(ability: List<String>): void
}
abstract class Item{
    # cost: int
    # hpHeal: int
    # manaHeal: int
    # canRevive = false: boolean
    + getCost(): int
    + getHpHeal(): int
    + getManaHeal(): int
    + getCanRevive(): boolean
}
class Bread{
    - cost = 200
    - hpHeal = 20
    - manaHeal = 0
}
class Cheese{
    - cost = 500
    - hpHeal = 50
    - manaHeal = 0
}
class Steak{
    - cost = 1000
    - hpHeal = 200
    - manaHeal = 0
}
class Water{
    - cost = 150
    - hpHeal = 0
    - manaHeal = 10
}
class Juice{
    - cost = 450
    - hpHeal = 0
    - manaHeal = 30
}
class Wine{
    - cost = 750
    - hpHeal = 0
    - manaHeal = 100
}
class Elixir{
    - cost = 2000
    - hpHeal = 9999
    - manaHeal = 9999
    - canRevive = true
}

interface ScoreStats{
        + getScore(): int
        + getParty(): List<HeroInstance>
    }
 interface CampaignSnapshot {
        + getRoomCounter(): int
        + setRoomCounter(roomCounter: int): void

        + getBattleChance(): double
        + setBattleChance(chance: double): void

        + getCurRoom(): String
        + setCurRoom(room: String): void

        + getGold(): int
        + setGold(gold: int): void

        + getExp(): int
        + setExp(exp: int): void

        + getParty(): List<HeroInstance>
        + setParty(party: List<HeroInstance>): void

        + getInnRecruits(): List<HeroInstance>
        + setInnRecruits(recruits: List<HeroInstance>): void

        + getItems(): List<Item>
        + setItems(items: List<Item>): void
    }
class CampaignSnapshotAdapter{

}

class RoomFactory{
    + createNextRoom(battleChance: float): Room
}

CampaignManager --> RoomFactory
RoomFactory --> Room


SpawnView -->  RoomController
BattleEnd -->  RoomController
InnView -->  InnController

BattleView --> BattleController


BattleController --> battleIntializeUseCase
BattleController --> gainExperienceUseCase
BattleController --> gainGoldUseCase



RoomController -->  NextRoomUseCase
RoomController --> itemConsumeUseCase



InnController--> InnIntializeUseCase
InnController--> BuyRecruitUseCase
InnController--> ViewRecruitUseCase
InnController--> BuyItemUseCase
InnController--> getShopUseCase

gainExperienceUseCase --> PartyService
gainGoldUseCase --> InventoryService
gainExperienceUseCase --> BattleRoom
gainGoldUseCase --> BattleRoom

CampaignSnapshotAdapter --> Inn
CampaignSnapshotAdapter --> CampaignManager
CampaignSnapshotAdapter --> PartyService 
CampaignSnapshotAdapter --> InventoryService
CampaignSnapshotAdapter ..> CampaignSnapshot
Score ..> ScoreStats
CampaignManager ..> Initialize 

NextRoomUseCase -->  CampaignManager
itemConsumeUseCase --> InventoryService

battleIntializeUseCase --> BattleRoom

getShopUseCase  --> Inn
ViewRecruitUseCase --> Inn
InnIntializeUseCase-->  PartyService
BuyItemUseCase  --> InventoryService

RoomController -> endCampaignUseCase
endCampaignUseCase --> Score
endCampaignUseCase --> InventoryService
endCampaignUseCase --> PartyService

Inn  --|> Room
BattleRoom  --|> Room
Inn --> HeroState
PartyService --> HeroState



InventoryService -> "0..*" Item

Item <|-- Bread
Item <|-- Cheese
Item <|-- Steak
Item <|-- Water
Item <|-- Juice
Item <|-- Wine
Item <|-- Elixir
@enduml